# study-python

./: .editorconfig  .gitattribute  .gitignore  README.md  cspell.json
LLM/langchain/: pyproject.toml
algorithms/matplotlib/: README.md  clear.py  pyproject.toml
algorithms/numpy/: pyproject.toml
algorithms/scipy/: pyproject.toml
basic/: .gitignore  .pdm-python  README.md  Todo.md  check.sh  conftest.py  cspell.json  dropcaches.sh  mypy.ini  pep8_checker.sh  pyproject.toml  pytest.ini  requirements.txt  run_test.sh
basic/basic/builtin/: __init__.py  automate.py  context.py  delegate.py  language_features.py
basic/basic/collection/: __init__.py  iterator.py  model.py
basic/basic/compression/: __init__.py  generator.py
basic/basic/decorate/: __init__.py  cache.py
basic/basic/io_/: crc64.py  finder.py  model.py
basic/basic/log/: conf.ini  conf.py
basic/basic/module/: __init__.py  func.py
basic/basic/network/: __init__.py  common.py
basic/basic/oop/: automate.py  delegate.py
basic/basic/testing/: README.md  __init__.py  utils.py
basic/basic/time_/: __init__.py  format.py
basic/builtin/: automate.py  context.py  delegate.py  test_class.py  test_context.py  test_eval.py  test_function.py  test_math.py  test_memview.py  test_typing.py  test_var_scope.py
basic/collection/: test_dict.py  test_generator.py  test_iter.py  test_iterator.py  test_list.py  test_set.py  test_sort.py  test_sorted_containers.py
basic/concurrence/: context.py  file_lock.py  group.py  test_file_lock.py  test_process.py  test_threading.py
basic/concurrence/multiprocessing_/: group.py  prime_result.py  test_initializer.py  test_manager.py  test_multiprocessing.py  test_pool.py  test_shared.py
basic/concurrence/threading_/: test_local.py  test_lock.py  test_pool.py
basic/decorator/: app.py  cache.py  decorator_object.py  tag.py  test_app.py  test_cache.py  test_decorator_object.py  test_tag.py
basic/io_/: aio_generator.py  crc64.py  test_asyncio.py  test_byte.py  test_compress.py  test_file.py  test_path.py  test_pickle.py
basic/log_/: conf.ini  test_adapter.py  test_conf.py  test_extra.py  test_filter.py  test_format.py  test_root.py
basic/module_/: test_module.py
basic/module_/sub/: __init__.py  func.py  plugin1.py  plugin2.py
basic/notebook/: setup.sh
basic/notebook/builtin/: builtin.ipynb  class.ipynb  decorator.ipynb  function.ipynb  grammar.ipynb  sys.ipynb
basic/notebook/module/: module.ipynb
basic/notebook/text/: csv.ipynb  format.ipynb  json.ipynb  regexp.ipynb  string.ipynb
basic/notebook/thread/: file_lock.ipynb  processing.ipynb  threading.ipynb
basic/notebook/time/: datetime.ipynb  rrule.ipynb  schedule.ipynb  timezone.ipynb
basic/src/builtin/: automate.py  (+1 more)
basic/testing/: README.md
basic/text/: test_character.py  test_json.py  test_regex.py  test_str.py
basic/time_/: format.py  test_calendar.py  test_datetime.py  test_rrule.py  test_timezone.py
blinker/: README.md  check.sh  conftest.py  cspell.json  pyproject.toml  test.sh
blinker/subscript/: events.py  signals.py
compile/: .gitignore  app.py  build.py  pyproject.toml  requirements.txt
compile/cython/: pdm.toml  pyproject.toml
compile/pyc/: .buildignore  build.py  clear.py  main.py  pyproject.toml
compile/utils/: paths.py  web.py
compile/wheel/: README.md  app.py  check.sh  pycln.cfg  pyproject.toml  pytest.ini  requirements-prod.txt  requirements.txt
database/: README.md  alembic.ini  clear.py  cspell.json  newrevision.sh  pyproject.toml  requirements.txt
database/alembic_/: README.md
database/docker/: README.md  docker-compose.yml
database/pymysql_/: curd.py
database/sqlalchemy_/: __init__.py  model.py  service.py
flask/: conftest.py  pyproject.toml  run.py  start.sh
flask/project/: .editorconfig  README.md  cspell.json  requirements.txt
flask/src/: run.py
graphene/: README.md  pyproject.toml
graphene/docker/: docker-compose.yml
graphene/example/: requirements.txt  setup.sh
graphql/: .markdownlint.json  README.md  conftest.py  cspell.json  pyproject.toml  pytest.ini  requirements.txt
graphql/basic/: argument.py  camel_case.py  enum_type.py  interface.py  list.py  mutation.py  parent.py  resolver.py  scalars.py  schema.py  test_argument.py  test_camel_case.py  test_context.py  test_enum_type.py  test_interface.py  test_list.py  test_middleware.py  test_mutation.py  test_operation_name.py  test_parent.py  test_resolver.py  test_root.py  test_scalars.py  test_schema.py  test_type_name.py  test_union_type.py  test_variables.py  type_name.py  union_type.py
graphql/execution/: context.py  dataloader.py  middleware.py  operation_name.py  root.py  subscription.py  test_context copy.py  test_context.py  test_dataloader.py  test_middleware.py  test_operation_name.py  test_root.py  test_subscription.py  test_variables.py  upload_file.md  variable.py
graphql/notebook/: basic.ipynb  execution.ipynb  relay.ipynb  setup.sh  types.ipynb
graphql/relay/: custom_node.py  custom_node_resolve.py  node.py  possible_types.py  test_custom_node.py  test_custom_node_resolve.py  test_node.py  test_possible_types.py
math/: conftest.py  cspell.json  pyproject.toml  requirements.txt
math/common/: __init__.py  test_vector.py  test_vectors.py  vector.py  vector_draw.py  vectors.py  vectors_draw.py
math/matplot/: README.md  common.py
math/notebooks/: README.md
thirdpart/blinker/: README.md  pyproject.toml
thirdpart/click/: README.md  main.py  pyproject.toml
thirdpart/dotenv/: .env  main.py  pyproject.toml
thirdpart/invoke/: main.py  pyproject.toml  tasks.py
thirdpart/loguru/: main.py  pyproject.toml
thirdpart/matplotlib/: pyproject.toml
thirdpart/pretty_errors/: README.md  main.py  pyproject.toml
toolchain/setup/: .flake8  README.md  check.sh  clear.py  main.py  mypy.ini  pycln.cfg  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
web/fastapi/: dev.py  pyproject.toml  start.sh  test.rest
web/flask/: pyproject.toml
web/graphene/: conftest.py  pyproject.toml
web/socketio/: client.py  pyproject.toml  requirements.txt  server.py
(+1064 files in other folders)
