[project]
name = "database-demo"
version = "0.1.0"
authors = [{ name = "Alvin", email = "quhao317@163.com" }]
dependencies = [
    "sqlalchemy>=2.0.39",
    "dbutils>=3.1.0",
    "pymysql>=1.1.1",
    "alembic>=1.15.1",
    "cryptography>=44.0.2",
    "pymongo>=4.11.2",
    "werkzeug>=3.1.3",
    "mongoengine>=0.29.1",
    "blinker>=1.9.0",
    "peewee>=3.17.9",
    "pysqlite3>=0.5.4",
    "typing-extensions>=4.12.2",
    "cffi>=1.17.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
lint = [
    "mypy>=1.15.0",
    "autopep8>=2.3.2",
]
test = [
    "pytest>=8.3.5",
    "factory-boy>=3.3.3",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
check = { composite = ["mypy src", "autopep8 src tests"] }
test = "pytest -vvs tests"
clean = { call = "clear:main" }
type_install = "mypy --install-types"

[tool.pycln]
all = true

[tool.mypy]
python_version = '3.13'
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_subclassing_any = false
exclude = ['migration/scripts/.+?\.py$']

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
addopts = [
    '-vvs',
    '-p no:warnings',
]
