[project]
name = "database-demo"
version = "0.1.0"
authors = [{ name = "Alvin", email = "quhao317@163.com" }]
dependencies = [
    "sqlalchemy>=2.0.41",
    "dbutils>=3.1.0",
    "pymysql>=1.1.1",
    "alembic>=1.16.1",
    "cryptography>=45.0.2",
    "pymongo>=4.13.0",
    "werkzeug>=3.1.3",
    "mongoengine>=0.29.1",
    "blinker>=1.9.0",
    "peewee>=3.18.1",
    "pysqlite3>=0.5.4",
    "typing-extensions>=4.13.2",
    "cffi>=1.17.1",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
type = [
    "types-peewee>=3.18.1.20250516"
]
lint = [
    "mypy>=1.15.0",
    "autopep8>=2.3.2",
    "pycln>=2.5.0",
]
test = [
    "pytest>=8.3.5",
    "factory-boy>=3.3.3",
]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
check = { composite = [
    "pycln --config=pyproject.toml .",
    "mypy .",
    "autopep8 .",
] }
test = "pytest"
clean = { call = "clear:main" }
type_install = "mypy --install-types"

[tool.pycln]
all = true
exclude = '\.history'

[tool.mypy]
python_version = '3.13'
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_subclassing_any = false
exclude = [
    '.venv',
    '.history',
    'migration/scripts/.+?\.py$',
]

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
addopts = [
    '-vvs',
    '-p no:warnings',
]
testpaths = [
    'tests',
]
