[project]
name = "database-demo"
version = "0.1.0"
authors = [
    { name = "Alvin", email = "quhao317@163.com" },
]
dependencies = [
    "sqlalchemy>=2.0.41",
    "dbutils>=3.1.1",
    "pymysql>=1.1.1",
    "alembic>=1.16.1",
    "cryptography>=45.0.4",
    "pymongo>=4.13.1",
    "werkzeug>=3.1.3",
    "mongoengine>=0.29.1",
    "blinker>=1.9.0",
    "peewee>=3.18.1",
    "pysqlite3>=0.5.4",
    "typing-extensions>=4.14.0",
    "cffi>=1.17.1",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
lint = [
    "autopep8>=2.3.2",
    "pycln>=2.5.0",
]
test = [
    "pytest>=8.4.0",
    "factory-boy>=3.3.3",
    "pytest-sugar>=1.0.0",
]
type = [
    "mypy>=1.16.0",
    "mypy-extensions>=1.1.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
lint = { composite = [
    "pycln --config=pyproject.toml",
    "autopep8 .",
] }
type = { composite = [
    "mypy",
] }
test = "pytest"
check = { composite = [
    "lint",
    "type",
    "test",
] }
clean = { call = "clear:main" }
type-install = "mypy --install-types"

[tool.pycln]
path = "."
all = true
exclude = '\.history'

[tool.mypy]
files = [
    '.',
]
strict = true
warn_unused_ignores = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_subclassing_any = false
exclude = '\.history|migration/scripts/.+?\.py$'

[tool.autopep8]
max_line_length = 120
ignore = [
    'E501',
    'W6',
]
in-place = true
recursive = true
jobs = -1
aggressive = 3
exclude = '.history'

[tool.pytest.ini_options]
addopts = [
    '-s',
    '-p no:warnings',
]
testpaths = [
    'tests',
]
