[project]
name = "study_python_flask"
version = "1.0.0"
authors = [
    {name = "Alvin", email = "quhao317@163.com"},
]
dependencies = [
    "flask>=3.0.0",
    "xxhash>=3.4.1",
    "flask-babel>=4.0.0",
    "wtforms>=3.1.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "beautifulsoup4>=4.12.2",
]
lint = [
    "autopep8",
    "mypy",
]
[tool.pdm.scripts]
check = { composite = ["mypy src", "autopep8 src tests"] }
test = "pytest -v -s tests"
clean = { composite = [
    "rm -rf .mypy_cache",
    "rm -rf .pytest_cache",
    'find src -type d -name "__pycache__" -exec rm -rf {} +',
    'find tests -type d -name "__pycache__" -exec rm -rf {} +',
] }

[tool.mypy]
python_version = '3.11'
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_subclassing_any = false
exclude = []

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-svv"
