[project]
name = "LLM-langchain"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AlvinQ", email = "quhao317@163.com"},
]
dependencies = ["langchain[openai]>=0.3.25"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
