[project]
name = "thirdpart-matplotlib"
version = "0.1.0"
authors = [
    { name = "AlvinQ", email = "quhao317@163.com" },
]
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
]
lint = [
    "autopep8>=2.3.2",
    "mypy>=1.16.0",
    "pycln>=2.5.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
check = { composite = [
    "pycln --config=pyproject.toml .",
    "mypy",
    "autopep8 .",
] }
test = "pytest"
clean = { call = "clear:main" }
type_install = "mypy --install-types"

[tool.pycln]
path = "."
all = true
exclude = '\.history'

[tool.mypy]
files = [
    ".",
]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_subclassing_any = false
exclude = '\.history'

[tool.autopep8]
max_line_length = 120
ignore = [
    'E501',
    'W6',
]
in-place = true
recursive = true
jobs = -1
aggressive = 3
exclude = '.history'

[tool.pytest.ini_options]
addopts = [
    '-vvs',
    '-p no:warnings',
]
testpaths = [
    'tests',
]
