[project]
name = "algorithms-numpy"
version = "0.1.0"
authors = [
    {name = "Alvin", email = "quhao317@163.com"},
]
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
]
requires-python = ">=3.13"
license = {text = "MIT"}

[dependency-groups]
test = [
    "pytest>=9.0.1",
    "pytest-sugar>=1.1.1",
]
lint = [
    "autopep8>=2.3.2",
    "pycln>=2.6.0",
]
type = [
    "mypy>=1.19.0",
    "mypy-extensions>=1.1.0",
]

[tool.pdm]
distribution = true

[tool.setuptools]
package-dir = {'' = 'lib'}

[tool.pdm.scripts]
lint = {composite = [
    "pycln --config=pyproject.toml",
    "autopep8 .",
]}
type = {composite = [
    "mypy",
]}
test = "pytest"
check = {composite = [
    "lint",
    "type",
    "test",
]}
clean = {call = "clear:main"}
type-install = "mypy --install-types"

[tool.pycln]
path = "."
all = true
exclude = '\.history|notebooks'

[tool.mypy]
files = [
    '.',
]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false
disallow_subclassing_any = false
exclude = '\.history|notebooks'

[tool.autopep8]
max_line_length = 120
ignore = [
    'E501',
    'W6',
]
in-place = true
recursive = true
jobs = -1
aggressive = 3
exclude = '.history,notebooks'

[tool.pytest.ini_options]
addopts = [
    '-s',
    '-p no:warnings',
]
testpaths = [
    'tests',
]
