[project]
name = "algorithms-numpy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "AlvinQ", email = "quhao317@163.com" },
]
dependencies = [
    "scipy>=1.15.3",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[dependency-groups]
test = [
    "pytest>=8.4.0",
    "pytest-sugar>=1.0.0",
]
type = [
    "mypy>=1.16.0",
    "mypy-extensions>=1.1.0",
]
lint = [
    "pycln>=2.5.0",
    "autopep8>=2.3.2",
]

[tool.pdm.scripts]
lint = { composite = [
    "pycln --config=pyproject.toml",
    "autopep8 .",
] }
type = { composite = [
    "mypy",
] }
test = "pytest"
check = { composite = [
    "lint",
    "type",
    "test",
] }
clean = { call = "clear:main" }
type-install = "mypy --install-types"

[tool.pycln]
path = "."
all = true
exclude = '\.history'

[tool.mypy]
files = [
    ".",
]
strict = true
warn_return_any = true
warn_unused_configs = true
# warn_unreachable = true
ignore_missing_imports = true
disallow_untyped_decorators = false
check_untyped_defs = true
exclude = '\.history'

[tool.autopep8]
max_line_length = 120
ignore = [
    'E501',
    'W6',
]
in-place = true
recursive = true
jobs = -1
aggressive = 3
exclude = '.history'

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "-s",
]
filterwarnings = [
]
