[project]
name = "pyc_demo"
version = "0.1.0"
authors = [{ name = "Alvin", email = "quhao317@163.com" }]
dependencies = [
    "flask>=3.1.0",
    "xxhash>=3.5.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
lint = [
    "autopep8>=2.3.2",
    "mypy>=1.14.1",
]
test = [
    "pytest>=8.3.4",
]

[tool.pdm.scripts]
start = { call = "app:main" }
check = { composite = ["mypy src", "autopep8 src tests"] }
test = "pytest -v -s tests"
compile = "build.py"
clean = { call = "clear:main" }
type_install = "mypy --install-types"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
check_untyped_defs = true
exclude = ['^.venv\.py$', '^.test\.py$']

[tool.autopep8]
max_line_length = 120
ignore = ['E501', 'W6']
in-place = true
recursive = true
jobs = -1
aggressive = 3

[tool.pytest.ini_options]
addopts = '-vs'
