[project]
name = "compile-pyc"
version = "0.1.0"
authors = [
    { name = "Alvin", email = "quhao317@163.com" },
]
dependencies = [
    "flask>=3.1.1",
    "xxhash>=3.5.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
lint = [
    "autopep8>=2.3.2",
    "pycln>=2.5.0",
]
test = [
    "pytest>=8.4.0",
    "pytest-sugar>=1.0.0",
]
type = [
    "mypy>=1.16.0",
    "mypy-extensions>=1.1.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
lint = { composite = [
    "pycln --config=pyproject.toml",
    "autopep8 .",
] }
type = { composite = [
    "mypy",
] }
test = "pytest"
check = { composite = [
    "lint",
    "type",
    "test",
] }
start = { call = "main:main" }
compile = "build.py"
clean = { call = "clear:main" }
type-install = "mypy . --install-types"

[tool.pycln]
path = "."
all = true
exclude = '\.history'

[tool.mypy]
files = [
    '.',
]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
check_untyped_defs = true
exclude = '\.history'

[tool.autopep8]
max_line_length = 120
ignore = [
    'E501',
    'W6',
    'E741',
]
in-place = true
recursive = true
jobs = -1
aggressive = 3
exclude = '.history'

[tool.pytest.ini_options]
addopts = [
    '-s',
]
testpaths = [
    'tests',
]
